tests/approvals/integration_test.test_extra_args.approved.txt
exit_code: 1
stdout:

stderr:
Check of <root-dir>/sample_inputs/proj_warning/src/main.cpp finished with exit code 1.
error: unknown argument: '-any' [clang-diagnostic-error]

1 error generated.
Error while processing <root-dir>/sample_inputs/proj_warning/src/main.cpp.

Check of <root-dir>/sample_inputs/proj_warning/src/sample_function.cpp finished with exit code 1.
error: unknown argument: '-any' [clang-diagnostic-error]
<root-dir>/sample_inputs/proj_warning/src/sample_function.cpp:5:26: error: do not call c-style vararg functions [cppcoreguidelines-pro-type-vararg,hicpp-vararg,-warnings-as-errors]
    5 | void sample_function() { std::printf("Test"); }
      |                          ^

<count> warnings and 1 error generated.
Error while processing <root-dir>/sample_inputs/proj_warning/src/sample_function.cpp.

Some errors detected.

